[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "apkraft"
version = "0.1.0"
description = "Small, pure-Python APK editor and inspection CLI"
readme = "README.md"
authors = [
    { name = "APKraft contributors" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13,<15",
    "apkutils2>=1.0,<2.0",
    "cryptography>=45.0.0,<47.0.0",
    "httpx>=0.27,<0.29"
]

[project.scripts]
apkraft = "apkraft.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["apkraft*"]
